--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "nodemailer": "^6.8.0"
   }
 }
